# bazel-arm-none-eabi

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md
.github/workflows/: test.yml
constraints/: BUILD.bazel
test/: BUILD.bazel
test/c_calls_rust/: BUILD.bazel  lib.rs  main.c
test/cortex_m0/: link.ld
test/cortex_m0_rust/: BUILD.bazel  main.rs
test/cortex_m3/: BUILD.bazel  link.ld
test/cortex_m33/: BUILD.bazel
test/cortex_m7/: BUILD.bazel
test/gcc/cortex_m0/: BUILD.bazel
test/gcc/cortex_m3/: main.c
test/gcc/cortex_m33/: link.ld
test/gcc/cortex_m7/: link.ld
test/gcc/hello/: BUILD.bazel
test/hello/: linker.ld
test/rust_calls_c/: BUILD.bazel  c_helpers.c  c_helpers.h  c_interface.rs  main.rs
test/rustc/hello_rust/: BUILD.bazel  main.rs
toolchains/: BUILD.bazel
toolchains/arm_none_eabi/: BUILD.bazel  cc_toolchain_config.bzl
toolchains/gcc_arm_none_eabi/: BUILD.bazel  cc_toolchain_config.bzl
toolchains/rustc_arm_none_eabi/: BUILD.bazel  rust_toolchain_config.bzl
