module(name = "bazel-arm-none-eabi", version = "0.1.0")

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_rust", version = "0.50.0")

# Use the built-in Rust toolchains from rules_rust
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(versions = ["1.81.0"])

register_toolchains("//:arm_none_eabi_toolchain")